--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Angular 2 QuickStart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/styles.css">
   <!-- 1. Load libraries -->
   <!-- IE required polyfills, in this exact order -->
   <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -13,6 +14,7 @@
   <script src="node_modules/systemjs/dist/system.src.js"></script>
   <script src="node_modules/rxjs/bundles/Rx.js"></script>
   <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+
   <!-- 2. Configure SystemJS -->
   <script>
     System.config({
@@ -22,9 +24,9 @@
           defaultExtension: 'js'
         }
       }
-    });
+    })
     System.import('app/main')
-      .then(null, console.error.bind(console));
+      .then(null, console.error.bind(console))
   </script>
 </head>
 
